@@ -37,11 +37,11 @@ class WineApiControllerTest {
         //Wine(String name, String year, Float rating, Integer num_reviews, Float price, String body,
         //String acidity, Winery winery, Type type, Region region)
 
-        Wine wine1 = new Wine("Wine1", "2000", new Float(4.5),
-            new Integer(4), new Float(6.7), "NA", "NA", new Winery("Winery1"), new Type("Duro"), new Region("España", "Europa"));
+        Wine wine1 = new Wine("Wine1", "2000", Float.valueOf(4.5f),
+            Integer.valueOf(4), Float.valueOf(4.5f), "NA", "NA", new Winery("Winery1"), new Type("Duro"), new Region("España", "Europa"));
 
-        Wine wine2 = new Wine("Wine2", "2002", new Float(4.5),
-            new Integer(4), new Float(6.7), "NA", "NA", new Winery("Winery2"), new Type("Duro2"), new Region("España", "Europa"));
+        Wine wine2 = new Wine("Wine2", "2002", Float.valueOf(4.5f),
+			Integer.valueOf(4), Float.valueOf(4.5f), "NA", "NA", new Winery("Winery2"), new Type("Duro2"), new Region("España", "Europa"));
         
         Mockito.when(wineService.getAll()).thenReturn(Arrays.asList(wine1, wine2));
 
@@ -51,8 +51,8 @@ class WineApiControllerTest {
     
     @Test
 	void getWineTest() throws Exception {
-    	Wine wine1 = new Wine("Wine1", "2000", new Float(4.5),
-                new Integer(4), new Float(6.7), "NA", "NA", new Winery("Winery1"), new Type("Duro"), new Region("España", "Europa"));
+    	Wine wine1 = new Wine("Wine1", "2000", Float.valueOf(4.5f),
+			Integer.valueOf(4), Float.valueOf(4.5f), "NA", "NA", new Winery("Winery1"), new Type("Duro"), new Region("España", "Europa"));
 
 		Mockito.when(wineService.getWineById(1)).thenReturn(wine1);
 
@@ -63,8 +63,8 @@ class WineApiControllerTest {
     @Test
     @WithMockUser(username = "admin", password = "1234", roles = { "USER" })
 	void saveWineTest() throws Exception {
-    	Wine wine1 = new Wine("Wine1", "2000", new Float(4.5),
-                new Integer(4), new Float(6.7), "NA", "NA", new Winery("Winery1"), new Type("Duro"), new Region("España", "Europa"));
+    	Wine wine1 = new Wine("Wine1", "2000", Float.valueOf(4.5f),
+			Integer.valueOf(4), Float.valueOf(4.5f), "NA", "NA", new Winery("Winery1"), new Type("Duro"), new Region("España", "Europa"));
 
 		Mockito.when(wineService.createWine(Mockito.any(Wine.class))).thenReturn(wine1);
 		
@@ -81,8 +81,8 @@ class WineApiControllerTest {
     @Test
     @WithMockUser(username = "admin", password = "1234", roles = { "USER" })
 	void updateWineTest() throws Exception {
-    	Wine wine1 = new Wine("Wine1", "2000", new Float(4.5),
-                new Integer(4), new Float(6.7), "NA", "NA", new Winery("Winery1"), new Type("Duro"), new Region("España", "Europa"));
+    	Wine wine1 = new Wine("Wine1", "2000", Float.valueOf(4.5f),
+			Integer.valueOf(4), Float.valueOf(4.5f), "NA", "NA", new Winery("Winery1"), new Type("Duro"), new Region("España", "Europa"));
 
 		Mockito.when(wineService.updateWine(Mockito.any(Wine.class))).thenReturn(wine1);
 		
